Change betting behavior, change endpoint urls
